Hotflix overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ html {
     background-color: var(--white-color);
     max-width: 100vw;
     width: 100vw;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 p {
